' Generated by UML Generator
' Encoded: rLdTRzis47_tNo7qILfiey_15jHDqjQ0anH9kZqCmq1BhCEM4Zs9IkCL_T_7RnufIcdI0SFwK9ZtyHFlU3pUNLvr7BMyh-ci-qoQFMfHdPKKTTsAyvPiUuxN9MjkoDyuUpcx8nNEIjAM5CzcIYfxpTZdKzRmbb6As-phBCiMMq6xmUqzAV6n4Z0BoLk8_uv2fNnClf2ogAeaIGcTtLvf0V6ZECwkSRTdJOVF6qxuuMV9E94gEynNbCfbbm_5DgJZMjOAoyNhmxhAINMStGYpczq4Uh-l4CUhUqGesX8gU41ldY7DeC8KiMMAKJF4qh8dis_GYy8cxJwF9bT2GM9v0khv7MiXfMHxWhlZZ3GySB50p0kuWFiCSCMs0zHv1Z0BuoRXe09yzgXJfC1dzunKHlfMuWyKD3NuTgYsKliOw1bokCjGyrJjM6fgFqWrGuF661td-Wr3ZNEz3B9ruFw-msr8KUurMjgzTX5gpxDGjm3Hbd2b8OSOeOKV5Dv0qv2ZhyLsIgcH46jGZGSM6dbjeLt0089QpmkHIu4ma5V403jrOd7AeOBcKiZ6Bu830obdJ5uPKhPOt719LN8gwvWpJgGJmL1veSMyRnkLgwJMUYANE1sTgUHoD5CfMIii5ofJFUaB9IVtofpkzK6Uv31K9ZuSvAWBjDzRb_krZf6luYNXfFoMSQPXyeepcAvnrIznIPOLwxuipwvkVljpGxOjQW_BahLuMRCAqwKKZz3irNe2GfY_t2R268B6-FN06FbvwMuT0uKBXV1gGJ2_dlICkLI5_fNugZmcpIoSTFZL-1f83HVM7_mYkDNW6ep95pgWTo8ESEj2Hbq4l-ieQ2G31BLSZWQraZq1QUtHvrUZ1y5uoVZAFhRd3oNUSy8QvOUZKNPUuwv3Ev2u7EHRohQ8EibtgAciNu_kr296pV73yVXEXZQ8c31F__ng-mcNNBj0Wqi31SuRrZUL0eQ4vuBAKDsGcd09W2kiaGVKvyAlHH3j45srkxx63LVW4Uq7eM_4XS0GLn6U2_eMDxX5LE4z6MEnxGcjh6Wkhsel4imxplStwlSyYuFhkv23d9G-5Xs4u_o9g4v6aSPBiYQWPAG_iq8T5iL1eUghrEylKVyFLIdfVAueeEbAsR6IBOF5m7_rY7QvU2zqn8GuTwYxEnNF7YXxETFx0BiDGYnrXFfvDM_lmhyxjhGw4vTEveqIKVbJactyg-99_PPKNGGbn5qHvalcuApz3dJThBy_pn9VVzx9wpXpHjgIE_SV7XRRENYRJQ4TFif0VcCscXUXvLBHyLBM12ZQataH-LM26DRGxo72jJk1r4u0DtbK06igZgJvJ-eaV1lnd_OG__Pz0iCAtq2Amm5vNicSPBza3VwIlHFmadUY_A6aJqsX2bNM3SSxKU-ajHRnMCJUcs7DcvY6-F77vFJ3QkjfXrm54u-urPrCOQG3-YBV3NfSS00xa1XDzpuGDmTJOT6eoHfZJCvzl_bEGSauVn0EwiRt6EJIuEpbvUwCWrNpP8vlrRReeAZWsCVcOrCLF5KzR2-2erLE4FWlWzngP4S7QZgrZXRyeEzzP9IXqyzZNQ-LYRfSxw17krg8y7WN2u23J1MSajIofwIQYh5JMYHxeA0VItGx7dUokx7Q4j94tC2SGSJ91Fs14weDSStYcwlhYzNjxVdriPAu9JL-mzeQSR5lOTo0jcGVtwiVJVxY8FujBYuMLVN26RsmtnbqhnKw31uLn_weyFDgyA3urEnazwWL9RGK5SpWl2soCtfTwQgTipPXUsclmugpcfGcSTeZXRJyfJSmmepit6cUYhNuCN92BHRlJ3wOJVsAA15cYKBQRpQaHH-xrqmi2l7BdjASRJ_PbscUVIIOLfVfToo5S5xlHMxkE9ZZFWdYFUk8l6Mv8FHOvPWdRwAv56tQZu5eYGrkTlmkjAOcZIORs1ez1ElHpmGljZaG1WPPZZHoFF4iQpYHZ403qYIedomE1xOHQ42Q1FLJcX3qZ7LVpCnijTzJKYBV3pge6f4cH-skirxy_Gy05Ft5vwV58dZ38lPoUUAcRz7WLch2KMt4bffsr0PcZn0mGPw1oPv5ID6aEfZRIRATi2N8isZO9hSE7-U83T56nafslydHqPHIickVKXWV6oY_k0FqAsKnB6qP5854vrrBZACXviLEWs3kipxgu-W9EV0SGuvr_YlSL7rD_m4
' URL: http://www.plantuml.com/plantuml/uml/rLdTRzis47_tNo7qILfiey_15jHDqjQ0anH9kZqCmq1BhCEM4Zs9IkCL_T_7RnufIcdI0SFwK9ZtyHFlU3pUNLvr7BMyh-ci-qoQFMfHdPKKTTsAyvPiUuxN9MjkoDyuUpcx8nNEIjAM5CzcIYfxpTZdKzRmbb6As-phBCiMMq6xmUqzAV6n4Z0BoLk8_uv2fNnClf2ogAeaIGcTtLvf0V6ZECwkSRTdJOVF6qxuuMV9E94gEynNbCfbbm_5DgJZMjOAoyNhmxhAINMStGYpczq4Uh-l4CUhUqGesX8gU41ldY7DeC8KiMMAKJF4qh8dis_GYy8cxJwF9bT2GM9v0khv7MiXfMHxWhlZZ3GySB50p0kuWFiCSCMs0zHv1Z0BuoRXe09yzgXJfC1dzunKHlfMuWyKD3NuTgYsKliOw1bokCjGyrJjM6fgFqWrGuF661td-Wr3ZNEz3B9ruFw-msr8KUurMjgzTX5gpxDGjm3Hbd2b8OSOeOKV5Dv0qv2ZhyLsIgcH46jGZGSM6dbjeLt0089QpmkHIu4ma5V403jrOd7AeOBcKiZ6Bu830obdJ5uPKhPOt719LN8gwvWpJgGJmL1veSMyRnkLgwJMUYANE1sTgUHoD5CfMIii5ofJFUaB9IVtofpkzK6Uv31K9ZuSvAWBjDzRb_krZf6luYNXfFoMSQPXyeepcAvnrIznIPOLwxuipwvkVljpGxOjQW_BahLuMRCAqwKKZz3irNe2GfY_t2R268B6-FN06FbvwMuT0uKBXV1gGJ2_dlICkLI5_fNugZmcpIoSTFZL-1f83HVM7_mYkDNW6ep95pgWTo8ESEj2Hbq4l-ieQ2G31BLSZWQraZq1QUtHvrUZ1y5uoVZAFhRd3oNUSy8QvOUZKNPUuwv3Ev2u7EHRohQ8EibtgAciNu_kr296pV73yVXEXZQ8c31F__ng-mcNNBj0Wqi31SuRrZUL0eQ4vuBAKDsGcd09W2kiaGVKvyAlHH3j45srkxx63LVW4Uq7eM_4XS0GLn6U2_eMDxX5LE4z6MEnxGcjh6Wkhsel4imxplStwlSyYuFhkv23d9G-5Xs4u_o9g4v6aSPBiYQWPAG_iq8T5iL1eUghrEylKVyFLIdfVAueeEbAsR6IBOF5m7_rY7QvU2zqn8GuTwYxEnNF7YXxETFx0BiDGYnrXFfvDM_lmhyxjhGw4vTEveqIKVbJactyg-99_PPKNGGbn5qHvalcuApz3dJThBy_pn9VVzx9wpXpHjgIE_SV7XRRENYRJQ4TFif0VcCscXUXvLBHyLBM12ZQataH-LM26DRGxo72jJk1r4u0DtbK06igZgJvJ-eaV1lnd_OG__Pz0iCAtq2Amm5vNicSPBza3VwIlHFmadUY_A6aJqsX2bNM3SSxKU-ajHRnMCJUcs7DcvY6-F77vFJ3QkjfXrm54u-urPrCOQG3-YBV3NfSS00xa1XDzpuGDmTJOT6eoHfZJCvzl_bEGSauVn0EwiRt6EJIuEpbvUwCWrNpP8vlrRReeAZWsCVcOrCLF5KzR2-2erLE4FWlWzngP4S7QZgrZXRyeEzzP9IXqyzZNQ-LYRfSxw17krg8y7WN2u23J1MSajIofwIQYh5JMYHxeA0VItGx7dUokx7Q4j94tC2SGSJ91Fs14weDSStYcwlhYzNjxVdriPAu9JL-mzeQSR5lOTo0jcGVtwiVJVxY8FujBYuMLVN26RsmtnbqhnKw31uLn_weyFDgyA3urEnazwWL9RGK5SpWl2soCtfTwQgTipPXUsclmugpcfGcSTeZXRJyfJSmmepit6cUYhNuCN92BHRlJ3wOJVsAA15cYKBQRpQaHH-xrqmi2l7BdjASRJ_PbscUVIIOLfVfToo5S5xlHMxkE9ZZFWdYFUk8l6Mv8FHOvPWdRwAv56tQZu5eYGrkTlmkjAOcZIORs1ez1ElHpmGljZaG1WPPZZHoFF4iQpYHZ403qYIedomE1xOHQ42Q1FLJcX3qZ7LVpCnijTzJKYBV3pge6f4cH-skirxy_Gy05Ft5vwV58dZ38lPoUUAcRz7WLch2KMt4bffsr0PcZn0mGPw1oPv5ID6aEfZRIRATi2N8isZO9hSE7-U83T56nafslydHqPHIickVKXWV6oY_k0FqAsKnB6qP5854vrrBZACXviLEWs3kipxgu-W9EV0SGuvr_YlSL7rD_m4
' Generated on: 2026-03-27T10:16:08.990245600

@startuml
skinparam classAttributeIconSize 0
hide circle

class BookController {
  -bookService: BookService
  --
  +BookController(bookService: BookService)
  +addBook(bookDTO: BookDTO): ResponseEntity<Book>
  +getAllBooks(): ResponseEntity<List<Book>>
  +getBookById(id: String): ResponseEntity<Book>
  +updateAvailability(id: String, available: boolean): ResponseEntity<String>
}

class BookDTO {
  -id: String
  -title: String
  -author: String
  -copies: int
  --
  +BookDTO()
  +BookDTO(id: String, title: String, author: String, copies: int)
  +getId(): String
  +setId(id: String): void
  +getTitle(): String
  +setTitle(title: String): void
  +getAuthor(): String
  +setAuthor(author: String): void
  +getCopies(): int
  +setCopies(copies: int): void
}

class LoanDTO {
  -bookId: String
  -userId: String
  --
  +LoanDTO()
  +LoanDTO(bookId: String, userId: String)
  +getBookId(): String
  +setBookId(bookId: String): void
  +getUserId(): String
  +setUserId(userId: String): void
}

class UserDTO {
  -id: String
  -name: String
  --
  +UserDTO()
  +UserDTO(id: String, name: String)
  +getId(): String
  +setId(id: String): void
  +getName(): String
  +setName(name: String): void
}

class LoanController {
  -loanService: LoanService
  --
  +LoanController(loanService: LoanService)
  +createLoan(loanDTO: LoanDTO): ResponseEntity<Loan>
  +returnBook(loanId: String): ResponseEntity<Loan>
  +getAllLoans(): ResponseEntity<List<Loan>>
  +getLoanById(loanId: String): ResponseEntity<Loan>
  +getActiveLoansByUser(userId: String): ResponseEntity<List<Loan>>
}

class BookMapper {
  -BookMapper()
  +{static} toEntity(dto: BookDTO): edu.eci.dosw.DOSW_Library.core.model.Book
  +{static} toDTO(book: edu.eci.dosw.DOSW_Library.core.model.Book, copies: int): BookDTO
}

class LoanMapper {
  -LoanMapper()
  +{static} toDTO(loan: Loan): LoanDTO
}

class UserMapper {
  -UserMapper()
  +{static} toEntity(dto: UserDTO): User
  +{static} toDTO(user: User): UserDTO
}

class UserController {
  -userService: UserService
  --
  +UserController(userService: UserService)
  +registerUser(userDTO: UserDTO): ResponseEntity<User>
  +getAllUsers(): ResponseEntity<List<User>>
  +getUserById(id: String): ResponseEntity<User>
}

class BookNotAvailableException {
  +BookNotAvailableException(message: String)
}

class GlobalExceptionHandler {
  +handleBookNotAvailable(ex: BookNotAvailableException): ResponseEntity<Map<String,Object>>
  +handleUserNotFound(ex: UserNotFoundException): ResponseEntity<Map<String,Object>>
  +handleLoanLimitExceeded(ex: LoanLimitExceededException): ResponseEntity<Map<String,Object>>
  +handleIllegalArgument(ex: IllegalArgumentException): ResponseEntity<Map<String,Object>>
  +handleIllegalState(ex: IllegalStateException): ResponseEntity<Map<String,Object>>
  +handleGeneral(ex: Exception): ResponseEntity<Map<String,Object>>
  -buildResponse(status: HttpStatus, message: String): ResponseEntity<Map<String,Object>>
}

class LoanLimitExceededException {
  +LoanLimitExceededException(message: String)
}

class UserNotFoundException {
  +UserNotFoundException(message: String)
}

class Book {
  -id: String
  -title: String
  -author: String
  -available: boolean
  --
  +Book()
  +Book(id: String, title: String, author: String)
  +getId(): String
  +setId(id: String): void
  +getTitle(): String
  +setTitle(title: String): void
  +getAuthor(): String
  +setAuthor(author: String): void
  +isAvailable(): boolean
  +setAvailable(available: boolean): void
  +equals(o: Object): boolean
  +hashCode(): int
  +toString(): String
}

class Loan {
  -id: String
  -book: Book
  -user: User
  -loanDate: LocalDate
  -status: LoanStatus
  -returnDate: LocalDate
  --
  +Loan()
  +Loan(id: String, book: Book, user: User, loanDate: LocalDate)
  +getId(): String
  +setId(id: String): void
  +getBook(): Book
  +setBook(book: Book): void
  +getUser(): User
  +setUser(user: User): void
  +getLoanDate(): LocalDate
  +setLoanDate(loanDate: LocalDate): void
  +getStatus(): LoanStatus
  +setStatus(status: LoanStatus): void
  +getReturnDate(): LocalDate
  +setReturnDate(returnDate: LocalDate): void
  +toString(): String
}

class User {
  -id: String
  -name: String
  --
  +User()
  +User(id: String, name: String)
  +getId(): String
  +setId(id: String): void
  +getName(): String
  +setName(name: String): void
  +equals(o: Object): boolean
  +hashCode(): int
  +toString(): String
}

class BookService {
  -books: Map<String, Book> = new HashMap<>()
  -bookCopies: Map<String, Integer> = new HashMap<>()
  --
  +addBook(book: Book, copies: int): Book
  +getAllBooks(): List<Book>
  +getBookById(id: String): Book
  +updateBookAvailability(bookId: String, available: boolean): void
  +isBookAvailable(bookId: String): boolean
  +getAvailableCopies(bookId: String): int
  +decrementCopies(bookId: String): void
  +incrementCopies(bookId: String): void
  +bookExists(bookId: String): boolean
}

class LoanService {
  -loans: List<Loan> = new ArrayList<>()
  -bookService: BookService
  -userService: UserService
  -loanCounter: int = 0
  --
  +LoanService(bookService: BookService, userService: UserService)
  +createLoan(bookId: String, userId: String): Loan
  +returnBook(loanId: String): Loan
  +getAllLoans(): List<Loan>
  +getLoanById(loanId: String): Loan
  +getActiveLoansByUser(userId: String): List<Loan>
}

class UserService {
  -users: List<User> = new ArrayList<>()
  --
  +registerUser(user: User): User
  +getAllUsers(): List<User>
  +getUserById(id: String): User
  +userExists(userId: String): boolean
}

class DateUtil {
  -{static} FORMATTER: DateTimeFormatter = DateTimeFormatter.ofPattern("yyyy-MM-dd")
  --
  -DateUtil()
  +{static} today(): LocalDate
  +{static} format(date: LocalDate): String
  +{static} parse(dateStr: String): LocalDate
}

class IdGeneratorUtil {
  -{static} counter: AtomicInteger = new AtomicInteger(0)
  --
  -IdGeneratorUtil()
  +{static} generateLoanId(): String
  +{static} reset(): void
}

class ValidationUtil {
  -ValidationUtil()
  +{static} validateNotNull(obj: Object, fieldName: String): void
  +{static} validateNotEmpty(str: String, fieldName: String): void
  +{static} validatePositive(value: int, fieldName: String): void
  +{static} validateNonNegative(value: int, fieldName: String): void
  +{static} validateStringLength(str: String, minLength: int, maxLength: int, fieldName: String): void
}

class BookValidator {
  -BookValidator()
  +{static} validate(dto: BookDTO): void
}

class LoanValidator {
  -LoanValidator()
  +{static} validate(dto: LoanDTO): void
}

class UserValidator {
  -UserValidator()
  +{static} validate(dto: UserDTO): void
}

class DoswLibraryApplication {
  +{static} main(args: String[]): void
}

BookController *-- BookService
BookController ..> BookDTO
LoanController *-- LoanService
LoanController ..> LoanDTO
BookMapper ..> BookDTO
BookMapper ..> Book
LoanMapper ..> Loan
LoanMapper ..> LoanDTO
UserMapper ..> UserDTO
UserMapper ..> User
UserController *-- UserService
UserController ..> UserDTO
GlobalExceptionHandler ..> BookNotAvailableException
GlobalExceptionHandler ..> UserNotFoundException
GlobalExceptionHandler ..> LoanLimitExceededException
Loan *-- Book
Loan *-- User
BookService o-- Book
LoanService o-- Loan
LoanService *-- BookService
LoanService *-- UserService
UserService o-- User
BookValidator ..> BookDTO
LoanValidator ..> LoanDTO
UserValidator ..> UserDTO
@enduml